--- a/resume.html
+++ b/resume.html
@@ -5,11 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Chad Reynolds</title>
+    <style>
+        body{
+            background-color: blanchedalmond;
+        }
+    </style>
 </head>
 <body>
     <h1>Chad Reynolds</1h>
-        <h2>2718 Ashland Lane North Port, Fl. 34286</h2>
-        <h2>941.201.7081</h2>
+    <h3>2718 Ashland Lane North Port, Fl. 34286</h3>
+    <h3>941.201.7081</h3>
+    <div>
+        <h3>Profile</h3>
+        <p>Hard working with 13+ years in the IT industry. Willing to go the extra mile for my employer as well as my customers.</p>
+        <h3>Expertise</h3>
+            <ul>
+                <li>Linux Operating System</li>
+                <li>Microsoft Operation System</li>
+                <li>MacOS</li>
+                <li>Python and Web Development</li>
+            </ul>
+        <h3>Work Experience</h3>
+            <ol>
+                <li>Cheney Brothers Inc.</li>
+                    <ul>Responsibilities
+                        <li>Day to day in office computers issues</li>
+                        <li>Assist remote sales staff troubleshooting computer issues as well as issues with internal software.</li>
+                        <li>Maintain inventory of computer equipment and peripherals</li>
+                        <li>Create new user accounts and streamline new user setup</li>
+                    </ul>
+                <li>Comcast Cable Company</li>
+                    <ul> Responsibilities
+                        <li>Assisted customers with issues in their network phone and cable services</li>
+                        <li>Ran new RG-6 and RG-11 lines from tap to device at customers homes</li>
+                        <li>Assisted in cable plant maintenance</li>
+                    </ul>    
+            </ol>
+    </div>
     
 </body>
 </html>
